[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "anyio_utils/__init__.py"

[tool.hatch.build.targets.wheel]
include = ["anyio_utils/**/*"]
exclude = ["**/__pycache__/**"]

[tool.hatch.build.targets.sdist]
include = ["anyio_utils/**/*"]
exclude = ["**/__pycache__/**"]

[project]
name = "anyio-utils"
description = "A collection of helpful utilities for anyio."
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    { name = "Graeme Holliday", email = "graeme@tastyware.dev" }
]
dependencies = [
    "anyio>=4.13.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tastyware/anyio-utils"
Funding = "https://github.com/sponsors/tastyware"
Source = "https://github.com/tastyware/anyio-utils"
Changelog = "https://github.com/tastyware/anyio-utils/releases"

[dependency-groups]
dev = [
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "ruff>=0.13.1",
    "trio>=0.30.0",
    "uvloop>=0.22.1",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pyright]
strict = ["anyio_utils/"]
